homeassistant/hass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hass
  name: hass
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hass
  strategy: {}
  template:
    metadata:
      labels:
        app: hass
    spec:
      containers:
      - image: homeassistant/home-assistant
        name: home-assistant
        imagePullPolicy: IfNotPresent
        # Mounting the persistent volume here ensures HomeAssistant configs survive Raspberry Pi reboots and pod restarts.
        volumeMounts:
        - name: hass-pv
          mountPath: /config
      volumes:
      - name: hass-pv
        persistentVolumeClaim:
          claimName: hass-pvc
