homeassistant/home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home
  name: home
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - image: homeassistant/home-assistant:2026.9 # Official homeassistant image
        name: home-assistant
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: home-pv
          mountPath: /config                # Mounting the persistent volume here ensures HomeAssistant configs
      volumes:                              # survive Raspberry Pi reboots and pod restarts.
      - name: home-pv
        persistentVolumeClaim:
          claimName: home-pvc
