homeassistant/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:                                # Add an annotation indicating the certificate issuer to use.
#    cert-manager.io/cluster-issuer: ca-issuer # Cluster-wide ClusterIssuer
  name: homeingress
  namespace: homeassistant
spec:
  ingressClassName: traefik                   # K3s cefault ingress controller
  rules:
  - host: homeassistant.home
    http:
      paths:
      - backend:
          service:
            name: homesvc                     # Make sure to link to the correct service name
            port:
              number: 8123
        path: /
        pathType: Prefix
#  tls:                                       # Placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
#  - hosts:
#    - homeassistant.home
#    secretName: home-cert                    # cert-manager will store the new certificate in this secret.
